[project]
name = "speech-dereverb"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "keras>=3.12.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "tensorflow>=2.21.0",
    "tqdm>=4.67.3",
    "wget>=3.2",
]
